--- a/css/styles.css
+++ b/css/styles.css
@@ -535,4 +535,22 @@ img{
     width: 13px;
     height: 13px;
     background-color: var(--first-color);
+    border-radius: 50%;
 }
+
+.qualification__line{
+    display: block;
+    width: 1px;
+    height: 100%;
+    background-color: var(--first-color);
+    transform: translate(6px, -7px);
+}
+
+.qualification [data-content]{
+    display: none;
+}
+
+.qualification__active [data-content]{
+    display: block;
+}
+
