--- a/css/styles.css
+++ b/css/styles.css
@@ -489,7 +489,13 @@ img{
 
 .qualification__tabs{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    margin-bottom: var(--mb-2);
+}
+
+#work__icon{
+    display: flex;
+    justify-content: center;
     margin-bottom: var(--mb-2);
 }
 
@@ -546,11 +552,11 @@ img{
     transform: translate(6px, -7px);
 }
 
-.qualification [data-content]{
-    display: none;
-}
-
-.qualification__active [data-content]{
+/* .qualification [data-content]{
     display: block;
 }
+
+.qualification__show [data-content]{
+    display: none;
+} */
 
