--- a/css/styles.css
+++ b/css/styles.css
@@ -550,6 +550,10 @@ img{
     display: none;
 }
 
-.qualification__active [data-content]{
+.qualification__active[data-content]{
     display: block;
+}
+
+.qualification__button .qualification__active{
+    color: var(--first-color);
 }
