--- a/css/styles.css
+++ b/css/styles.css
@@ -557,3 +557,23 @@ img{
 .qualification__button.qualification__active{
     color: var(--first-color);
 }
+
+/* services section */
+
+.services__container{
+    gap: 1.5rem;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.services__content{
+    position: relative;
+    background-color: var(--container-color);
+    padding: 3.5rem .5rem 1.25rem 1.5rem;
+    border-radius: .25rem;
+    box-shadow: 0 2px 4px rgba(0, 0, 0,.15);
+    transition: .3s;
+}
+
+.services__content:hover{
+    box-shadow: 0 4px 8px rgba(0, 0, 0,.15);
+}
