--- a/css/styles.css
+++ b/css/styles.css
@@ -672,3 +672,32 @@ img{
     visibility: visible;
 }
 
+/* Portfolio section */
+
+.portfolio__container{
+    overflow: inherit;
+}
+
+.portfolio__content{
+    padding: 0 1.5rem;
+}
+
+.portfolio__img{
+    width: 265px;
+    border-radius: .5rem;
+    justify-content: center;
+}
+
+.portfolio__title{
+    font-size: var(--h3-font-size);
+    margin-bottom: var(--mb-0-5);
+}
+
+.portfolio__subtitle{
+    margin-bottom: var(--mb-0-25);
+}
+
+.portfolio__button:hover .button__icon{
+    transform: translateX(.25rem);
+}
+
